@@ -3690,21 +3690,21 @@ get_float_format
 hypot
 
  SYNOPSIS
-  Compute sqrt(x^2+y^2)
+  Compute sqrt(x1^2+x2^2+...+xN^2)
 
  USAGE
-  r = hypot (x [,y])
+  r = hypot (x1 [,x2...,xN]
 
  DESCRIPTION
-  If given two arguments, `hypot' function computes the quantity
-  `sqrt(x^2+y^2)' except that it employs an algorithm that tries
-  to avoid arithmetic overflow when `x' or `y' are large.
-  If either argument is an array, an array of the corresponding values
-  will be returned.
+ If given two or more arguments, `x1,...,xN', `hypot'
+ function computes the quantity `sqrt(x1^2+...+xN^2)' using an
+ algorithm that tries to avoid arithmetic overflow.  If any of the
+ arguments is an array, an array of the corresponding values will be
+ returned.
 
-  If given a single array argument `x', the `hypot' function will
-  compute `sqrt(sumsq(x))', where `sumsq(x)' computes the sum
-  of the squares of the elements of `x'.
+ If given a single array argument `x', the `hypot' function
+ will compute `sqrt(sumsq(x))', where `sumsq(x)' computes
+ the sum of the squares of the elements of `x'.
 
  SEE ALSO
   atan2, cos, atan, acosh, cosh, sum, sumsq
